✨ set activity desc via query param or body and fix swagger doc
