# docs/swagger.json
@@ -108,7 +108,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "activities"
+                            "type": "file"
                         }
                     }
                 }
@@ -187,8 +187,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/Activity"
                         }
@@ -211,42 +211,6 @@
                     "activity"
                 ],
                 "summary": "Stops a activity",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Activity"
-                        }
-                    }
-                }
-            }
-        },
-        "/activity/{desc}": {
-            "post": {
-                "security": [
-                    {
-                        "BasicAuth": []
-                    },
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "activity"
-                ],
-                "summary": "Starts a activity",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Activity description",
-                        "name": "desc",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -294,9 +258,6 @@
             },
             "put": {
                 "security": [
-                    {
-                        "BasicAuth ApiKeyAuth": []
-                    },
                     {
                         "BasicAuth": []
                     },
@@ -605,7 +566,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "holidays"
+                            "type": "file"
                         }
                     }
                 }
@@ -765,7 +726,7 @@
                 "parameters": [
                     {
                         "description": "Input user",
-                        "name": "bottles",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
